# JmekBot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  docker-deploy.yml  docker-image.yml
jmekbot/: __init__.py  __main__.py  anekdot.py  background.py  bot.py  commands.py  handlers.py  loader.py  middlewares.py  responses.py
jmekbot/filters/: chat_type.py  mention.py  reply.py
jmekbot/handlers/: anekdot.py  chat_message.py
jmekbot/middlewares/: random.py
jmekbot/services/: anekdot.py
