[tool.poetry]
name = "jmekbot"
version = "0.1.0"
description = ""
authors = ["antoshayastreb <nedanon@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
aiogram = "^2.25.1"
aiohttp = "^3.8.5"
beautifulsoup4 = "^4.12.2"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
