[tool.poetry]
name = "jmekbot"
version = "0.1.0"
description = ""
authors = ["antoshayastreb <nedanon@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
aiohttp = "^3.8.5"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
